# Topological-Graph-for-QAOA

./: CITATION.cff  README.md  index.html
attic_rank7_cleanup/code/results/: main_results.tex
code/: README.md  pyproject.toml  requirements-optional-gpu.txt
code/configs/: full.yaml  smoke.yaml
code/scripts/: audit_claims.py  make_figures.py  make_tables.py  run.py
code/src/topoqaoa/: __init__.py  depth.py  depthexp.py  descriptors.py  env.py  graph_generators.py  reproduce.py
code/tests/: test_descriptor_invariance.py  test_maxcut_exact.py  test_splits_and_metrics.py
submission/: index.html  main.tex  main.tex.bak_idfix  main.tex.bak_preenrich  main.tex.bak_prephase2  main.tex.bak_serieschain  refs.bib
submission/code/: CITATION.cff  Makefile  README.md  THEORY.txt  environment.yml  pyproject.toml
submission/code/configs/: full.yaml  smoke.yaml
submission/code/results/: macros.tex  main_results.tex  summary.json  tab_frontier.tex
submission/code/scripts/: audit_claims.py  make_figures.py  make_tables.py  run.py
submission/code/src/topoqaoa/: __init__.py  baselines.py  config.py  env.py  foundations.py  kernels.py  maxcut_exact.py  metrics.py  plotting.py  qaoa.py  reproduce.py  runner.py  splits.py  theory.py
submission/code/src/topoqaoa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
submission/code/tests/: test_qaoa_closed_form.py  test_schedule_and_kernel.py
submission/tables/: main_results.md  main_results_float.tex  summary_full.json  tab_depth.tex  tab_family.tex
