[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "topoqaoa"
version = "0.1.0"
description = "Topology-conditioned QAOA warm starts: a query-counted, relabeling-invariant MaxCut benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = [
  "QAOA",
  "MaxCut",
  "warm start",
  "graph topology",
  "quantum optimization",
  "benchmark",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "networkx>=3.0,<4",
  "scikit-learn>=1.2,<2",
  "matplotlib>=3.6,<4",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
gpu = ["torch>=2.0,<3"]
dev = ["pytest>=7.0,<9", "build>=1.0,<2", "twine>=4.0,<7"]

[project.scripts]
topoqaoa-reproduce = "topoqaoa.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
